OlaCompiler/Frontend/Parser.cpp
#include "Parser.h"
#include "Diagnostics.h"
#include "FrontendContext.h"
#include "AST/AST.h"
#include "AST/Type.h"
#include "Sema.h"

namespace ola
{
	namespace
	{
		std::string GetTypeNameForTemplate(QualType const& type)
		{
			Type const* t = type.GetTypePtr();
			if (!t) return "?";
			if (isa<IntType>(t)) 	return "int";
			if (isa<FloatType>(t)) 	return "float";
			if (isa<BoolType>(t)) 	return "bool";
			if (isa<CharType>(t)) 	return "char";
			if (isa<VoidType>(t)) 	return "void";
			if (isa<ClassType>(t))
			{
				ClassDecl const* cd = cast<ClassType>(t)->GetClassDecl();
				return std::string(cd->GetName());
			}
			if (isa<ArrayType>(t))
			{
				ArrayType const* arr = cast<ArrayType>(t);
				return GetTypeNameForTemplate(arr->GetElementType()) + "[]";
			}
			if (isa<PtrType>(t))
			{
				PtrType const* ptr = cast<PtrType>(t);
				return GetTypeNameForTemplate(ptr->GetPointeeType()) + "*";
			}
			return "?";
		}
	}

	Parser::Parser(FrontendContext* context, Diagnostics& diagnostics) : context(context), diagnostics(diagnostics) {}
	Parser::~Parser() = default;

	void Parser::Parse(std::vector<Token>&& _tokens)
	{
		tokens = std::move(_tokens);
		current_token = tokens.begin();
		sema = MakeUnique<Sema>(context, diagnostics);
		ast = MakeUnique<AST>();
		AddBuiltinDecls(ast->translation_unit);
		ParseTranslationUnit();
		if (diagnostics.HasErrors()) 
		{
			ast.reset();
		}
	}

	void Parser::ParseImported(std::vector<Token> const& _tokens)
	{
		tokens = _tokens;
		current_token = tokens.begin();
		sema = MakeUnique<Sema>(context, diagnostics);
		ast = MakeUnique<AST>();
		ParseTranslationUnit();
		if (diagnostics.HasErrors()) 
		{
			ast.reset();
		}
	}

	void Parser::ParseTranslationUnit()
	{
		while (current_token->IsNot(TokenKind::eof) && !diagnostics.HasErrors())
		{
			UniqueDeclPtrList decls = ParseGlobalDeclaration();
			for(auto&& decl : decls) 
			{
				ast->translation_unit->AddDecl(std::move(decl));
			}
		}
	}

	void Parser::AddBuiltinDecls(UniqueTranslationUnitPtr& TU)
	{
		UniqueAliasDeclPtr string_alias = sema->ActOnAliasDecl("string", SourceLocation{}, ArrayType::Get(context, CharType::Get(context), 0));
		if (string_alias)
		{
			TU->AddDecl(std::move(string_alias));
		}
	}

	UniqueDeclPtrList Parser::ParseGlobalDeclaration()
	{
		while (Consume(TokenKind::semicolon)) 
		{
			Diag(empty_statement);
		}

		UniqueDeclPtrList global_decl_list;
		if (Consume(TokenKind::KW_extern))
		{
			if (IsFunctionDeclaration())
			{
				UniqueFunctionDeclPtr function_decl = ParseFunctionDeclaration();
				if(function_decl)
				{
					global_decl_list.push_back(std::move(function_decl));
				}
			}
			else
			{
				global_decl_list = ParseExternVariableDeclaration();
			}
		}
		else
		{
			DeclVisibility visibility = DeclVisibility::Private;
			if (Consume(TokenKind::KW_public))
			{
				visibility = DeclVisibility::Public;
			}
			else if (Consume(TokenKind::KW_private))
			{
				visibility = DeclVisibility::Private;
			}

			if (current_token->Is(TokenKind::KW_static))
			{
				Diag(static_outside_class);
				return global_decl_list;
			}

			if (Consume(TokenKind::KW_class))
			{
				UniqueDeclPtr class_decl = ParseClassDeclaration();
				if (class_decl)
				{
					global_decl_list.push_back(std::move(class_decl));
				}
			}
			else if (Consume(TokenKind::KW_interface))
			{
				UniqueClassDeclPtr interface_decl = ParseInterfaceDeclaration();
				if (interface_decl)
				{
					global_decl_list.push_back(std::move(interface_decl));
				}
			}
			else if (Consume(TokenKind::KW_enum))
			{
				UniqueEnumDeclPtr enum_decl = ParseEnumDeclaration();
				if (enum_decl)
				{
					global_decl_list.push_back(std::move(enum_decl));
				}
			}
			else if (Consume(TokenKind::KW_alias))
			{
				UniqueAliasDeclPtr alias_decl = ParseAliasDeclaration();
				if (alias_decl)
				{
					global_decl_list.push_back(std::move(alias_decl));
				}
			}
			else
			{
				if (IsFunctionDeclaration())
				{
					UniqueDeclPtr function_decl = ParseFunctionDefinition(visibility);
					if(function_decl)
					{
						global_decl_list.push_back(std::move(function_decl));
					}
				}
				else
				{
					UniqueVarDeclPtrList variable_decls = ParseVariableDeclaration(visibility);
					for (auto& variable_decl : variable_decls)
					{
						if(variable_decl)
						{
							global_decl_list.push_back(std::move(variable_decl));
						}
					}
				}
			}

			if (!global_decl_list.empty()) 
			{
				global_decl_list.back()->SetVisibility(visibility);
			}
		}
		return global_decl_list;
	}

	UniqueFunctionDeclPtr Parser::ParseFunctionDeclaration()
	{
		SourceLocation const& loc = current_token->GetLocation();
		std::string_view name = "";
		QualType function_type{};
		UniqueParamVarDeclPtrList param_decls;
		FuncAttributes attrs = FuncAttribute_None;
		{
			SYM_TABLE_GUARD(sema->sema_ctx.decl_sym_table);
			ParseFunctionAttributes(attrs);
			QualType return_type{};
			ParseTypeQualifier(return_type);
			ParseTypeSpecifier(return_type);
			if (current_token->IsNot(TokenKind::identifier))
			{
				Diag(expected_identifier);
				return nullptr;
			}

			name = current_token->GetData(); ++current_token;
			Expect(TokenKind::left_round);

			std::vector<QualType> param_types{};
			while (!Consume(TokenKind::right_round))
			{
				if (current_token->Is(TokenKind::eof) || current_token->Is(TokenKind::left_brace))
				{
					Diag(unexpected_token);
					break;
				}
				if (!param_types.empty() && !Consume(TokenKind::comma))
				{
					Diag(function_params_missing_coma);
				}

				UniqueParamVarDeclPtr param_decl = ParseParamVariableDeclaration();
				if (!param_decl)
				{
					Diag(unexpected_token);
					break;
				}
				param_types.emplace_back(param_decl->GetType());
				param_decls.push_back(std::move(param_decl));
			}
			function_type.SetType(FuncType::Get(context, return_type, param_types));
			Expect(TokenKind::semicolon, function_def_cannot_be_extern);
		}
		return sema->ActOnFunctionDecl(name, loc, function_type, std::move(param_decls), DeclVisibility::Extern, attrs);
	}

	UniqueDeclPtr Parser::ParseFunctionDefinition(DeclVisibility visibility, Bool is_template_instantiation)
	{
		Uint64 start_token_pos = current_token - tokens.begin();
		SourceLocation const& loc = current_token->GetLocation();
		std::string_view name = "";
		QualType function_type{};
		UniqueParamVarDeclPtrList param_decls;
		UniqueCompoundStmtPtr function_body;
		FuncAttributes attrs = FuncAttribute_None;
		UniqueFunctionDeclPtr func_decl = nullptr;
		{
			SYM_TABLE_GUARD(sema->sema_ctx.decl_sym_table);
			ParseFunctionAttributes(attrs);
			QualType return_type{};
			ParseTypeQualifier(return_type);

			// Check for template function with unknown return type: identifier identifier <
			if (!is_template_instantiation &&
				current_token->Is(TokenKind::identifier) &&
				(current_token + 1)->Is(TokenKind::identifier) &&
				(current_token + 2)->Is(TokenKind::less) &&
				!sema->sema_ctx.tag_sym_table.Lookup(current_token->GetData()))
			{
				++current_token; 
			}
			else
			{
				ParseTypeSpecifier(return_type);
			}

			if (current_token->IsNot(TokenKind::identifier))
			{
				Diag(expected_identifier);
				return nullptr;
			}

			SourceLocation const& loc = current_token->GetLocation();
			name = current_token->GetData(); ++current_token;

			if (is_template_instantiation && Consume(TokenKind::less))
			{
				Int32 angle_count = 1;
				while (angle_count != 0)
				{
					if (current_token->Is(TokenKind::less)) ++angle_count;
					else if (current_token->Is(TokenKind::greater)) --angle_count;
					++current_token;
				}
			}

			std::vector<std::string> type_params;
			if (!is_template_instantiation && Consume(TokenKind::less))
			{
				do
				{
					if (current_token->IsNot(TokenKind::identifier))
					{
						Diag(expected_identifier);
						return nullptr;
					}
					type_params.push_back(std::string(current_token->GetData()));
					++current_token;
				} while (Consume(TokenKind::comma));
				Expect(TokenKind::greater);
			}

			if (!type_params.empty())
			{
				Uint64 body_token_begin = start_token_pos;
				Expect(TokenKind::left_round);
				Int32 paren_count = 1;
				while (paren_count != 0)
				{
					if (current_token->Is(TokenKind::left_round)) ++paren_count;
					else if (current_token->Is(TokenKind::right_round)) --paren_count;
					if (paren_count != 0) ++current_token;
				}
				Expect(TokenKind::right_round);

				Expect(TokenKind::left_brace);
				Int32 brace_count = 1;
				while (brace_count != 0)
				{
					if (current_token->Is(TokenKind::left_brace)) ++brace_count;
					else if (current_token->Is(TokenKind::right_brace)) --brace_count;
					if (brace_count != 0) ++current_token;
				}
				++current_token;
				Uint64 body_token_end = current_token - tokens.begin();

				return sema->ActOnTemplateFunctionDecl(name, loc, std::move(type_params), attrs, visibility, body_token_begin, body_token_end);
			}

			Expect(TokenKind::left_round);

			std::vector<QualType> param_types{};
			while (!Consume(TokenKind::right_round))
			{
				if (current_token->Is(TokenKind::eof) || current_token->Is(TokenKind::left_brace))
				{
					Diag(unexpected_token);
					break;
				}
				if (!param_types.empty() && !Consume(TokenKind::comma))
				{
					Diag(function_params_missing_coma);
				}

				UniqueParamVarDeclPtr param_decl = ParseParamVariableDeclaration();
				if (!param_decl)
				{
					Diag(unexpected_token);
					break;
				}
				param_types.emplace_back(param_decl->GetType());
				param_decls.push_back(std::move(param_decl));
			}
			function_type.SetType(FuncType::Get(context, return_type, param_types));
			func_decl = sema->ActOnFunctionDecl(name, loc, function_type, std::move(param_decls), visibility, attrs);
			if (!func_decl)
			{
				return nullptr;
			}
			if (Consume(TokenKind::semicolon))
			{
				Diag(function_decl_needs_to_be_extern);
				return nullptr;
			}
			sema->sema_ctx.current_func = &function_type;
			function_body = ParseCompoundStatement();
			sema->sema_ctx.current_func = nullptr;
		}
		return sema->ActOnFunctionDefinition(loc, std::move(func_decl), std::move(function_body));
	}

	UniqueMethodDeclPtr Parser::ParseMethodDeclaration()
	{
		DeclVisibility visibility = DeclVisibility::Private;
		if (Consume(TokenKind::KW_public))
		{
			visibility = DeclVisibility::Public;
		}
		else if (Consume(TokenKind::KW_private))
		{
			visibility = DeclVisibility::Private;
		}

		SourceLocation const& loc = current_token->GetLocation();
		std::string_view name = "";
		QualType function_type{};
		UniqueParamVarDeclPtrList param_decls;
		FuncAttributes func_attrs = FuncAttribute_None;
		MethodAttributes method_attrs = MethodAttribute_None;
		{
			SYM_TABLE_GUARD(sema->sema_ctx.decl_sym_table);
			ParseFunctionAttributes(func_attrs);
			if (current_token->IsOneOf(TokenKind::KW_virtual, TokenKind::KW_pure, TokenKind::KW_final, TokenKind::KW_const))
			{
				Diag(method_attr_before_return_type);
				return nullptr;
			}
			QualType return_type{};
			ParseTypeQualifier(return_type);
			ParseTypeSpecifier(return_type);
			if (current_token->IsNot(TokenKind::identifier))
			{
				Diag(expected_identifier);
				return nullptr;
			}

			SourceLocation const& loc = current_token->GetLocation();
			name = current_token->GetData(); ++current_token;
			Expect(TokenKind::left_round);
			std::vector<QualType> param_types{};
			while (!Consume(TokenKind::right_round))
			{
				if (current_token->Is(TokenKind::eof) || current_token->Is(TokenKind::left_brace))
				{
					Diag(unexpected_token);
					break;
				}
				if (!param_types.empty() && !Consume(TokenKind::comma))
				{
					Diag(function_params_missing_coma);
				}

				UniqueParamVarDeclPtr param_decl = ParseParamVariableDeclaration();
				if (!param_decl)
				{
					Diag(unexpected_token);
					break;
				}
				param_types.emplace_back(param_decl->GetType());
				param_decls.push_back(std::move(param_decl));
			}
			function_type.SetType(FuncType::Get(context, return_type, param_types));
			ParseMethodAttributes(method_attrs);
			method_attrs |= MethodAttribute_Pure;	//method declarations can appear only in interfaces, and they are always pure and virtual
			method_attrs |= MethodAttribute_Virtual; 
			Expect(TokenKind::semicolon);
		}
		return sema->ActOnMethodDecl(name, loc, function_type, std::move(param_decls), nullptr, visibility, func_attrs, method_attrs);
	}

	UniqueMethodDeclPtr Parser::ParseMethodDefinition(MethodParseMode mode, MethodDecl* existing_stub)
	{
		DeclVisibility visibility = DeclVisibility::Private;
		if (Consume(TokenKind::KW_public))
		{
			visibility = DeclVisibility::Public;
		}
		else if (Consume(TokenKind::KW_private))
		{
			visibility = DeclVisibility::Private;
		}

		Bool is_static = Consume(TokenKind::KW_static);

		SourceLocation const& loc = current_token->GetLocation();
		std::string_view name = "";
		QualType function_type{};
		UniqueParamVarDeclPtrList param_decls;
		UniqueCompoundStmtPtr function_body;
		FuncAttributes func_attrs = FuncAttribute_None;
		MethodAttributes method_attrs = MethodAttribute_None;
		{
			SYM_TABLE_GUARD(sema->sema_ctx.decl_sym_table);
			ParseFunctionAttributes(func_attrs);
			if (current_token->IsOneOf(TokenKind::KW_virtual, TokenKind::KW_pure, TokenKind::KW_final, TokenKind::KW_const))
			{
				Diag(method_attr_before_return_type);
				return nullptr;
			}
			QualType return_type{};
			ParseTypeQualifier(return_type);
			ParseTypeSpecifier(return_type);
			if (current_token->IsNot(TokenKind::identifier))
			{
				Diag(expected_identifier);
				return nullptr;
			}

			SourceLocation const& loc = current_token->GetLocation();
			name = current_token->GetData(); ++current_token;
			Expect(TokenKind::left_round);
			std::vector<QualType> param_types{};
			while (!Consume(TokenKind::right_round))
			{
				if (current_token->Is(TokenKind::eof) || current_token->Is(TokenKind::left_brace))
				{
					Diag(unexpected_token);
					break;
				}
				if (!param_types.empty() && !Consume(TokenKind::comma))
				{
					Diag(function_params_missing_coma);
				}

				UniqueParamVarDeclPtr param_decl = ParseParamVariableDeclaration();
				if (!param_decl)
				{
					Diag(unexpected_token);
					break;
				}
				param_types.emplace_back(param_decl->GetType());
				param_decls.push_back(std::move(param_decl));
			}
			function_type.SetType(FuncType::Get(context, return_type, param_types));
			ParseMethodAttributes(method_attrs);
			if (is_static)
			{
				method_attrs |= MethodAttribute_Static;
			}
			if (mode == MethodParseMode::Declarations)
			{
				if (!Consume(TokenKind::semicolon))
				{
					Int32 brace_count = 0;
					Expect(TokenKind::left_brace); ++brace_count;
					while (brace_count != 0)
					{
						if (Consume(TokenKind::left_brace))
						{
							++brace_count;
						}
						else if (Consume(TokenKind::right_brace))
						{
							--brace_count;
						}
						else current_token++;
					}
				}
			}
			else
			{
				if (!Consume(TokenKind::semicolon))
				{
					sema->sema_ctx.current_func = &function_type;
					sema->sema_ctx.is_method_const = HasAttribute(method_attrs, MethodAttribute_Const);
					sema->sema_ctx.is_static_method = is_static;
					function_body = ParseCompoundStatement();
					sema->sema_ctx.is_static_method = false;
					sema->sema_ctx.is_method_const = false;
					sema->sema_ctx.current_func = nullptr;
				}
			}
		}
		if (mode == MethodParseMode::Declarations)
		{
			return sema->ActOnMethodDecl(name, loc, function_type, std::move(param_decls), nullptr, visibility, func_attrs, method_attrs, /*pre_registration=*/true);
		}
		else 
		{
			if (existing_stub)
			{
				sema->ActOnAttachMethodBody(existing_stub, std::move(param_decls), std::move(function_body));
			}
			return nullptr;
		}
	}

	UniqueConstructorDeclPtr Parser::ParseConstructorDefinition(MethodParseMode mode, MethodDecl* existing_stub)
	{
		SourceLocation const& loc = current_token->GetLocation();
		std::string_view name = "";
		QualType function_type{};
		UniqueParamVarDeclPtrList param_decls;
		UniqueCompoundStmtPtr constructor_body;
		{
			SYM_TABLE_GUARD(sema->sema_ctx.decl_sym_table);
			if (current_token->IsNot(TokenKind::identifier))
			{
				Diag(expected_identifier);
				return nullptr;
			}
			SourceLocation const& loc = current_token->GetLocation();
			name = current_token->GetData(); ++current_token;
			Expect(TokenKind::left_round);
			std::vector<QualType> param_types{};
			while (!Consume(TokenKind::right_round))
			{
				if (current_token->Is(TokenKind::eof) || current_token->Is(TokenKind::left_brace))
				{
					Diag(unexpected_token);
					break;
				}
				if (!param_types.empty() && !Consume(TokenKind::comma))
				{
					Diag(function_params_missing_coma);
				}

				UniqueParamVarDeclPtr param_decl = ParseParamVariableDeclaration();
				if(param_decl)
				{
					param_types.emplace_back(param_decl->GetType());
					param_decls.push_back(std::move(param_decl));
				}
			}
			function_type.SetType(FuncType::Get(context, VoidType::Get(context), param_types));
			if (mode == MethodParseMode::Declarations)
			{
				if (!Consume(TokenKind::semicolon))
				{
					Int32 brace_count = 0;
					Expect(TokenKind::left_brace); ++brace_count;
					while (brace_count != 0)
					{
						if (Consume(TokenKind::left_brace))
						{
							++brace_count;
						}
						else if (Consume(TokenKind::right_brace))
						{
							--brace_count;
						}
						else current_token++;
					}
				}
			}
			else 
			{
				if (!Consume(TokenKind::semicolon))
				{
					sema->sema_ctx.current_func = &function_type;
					sema->sema_ctx.is_constructor = true;
					constructor_body = ParseCompoundStatement();
					sema->sema_ctx.is_constructor = false;
					sema->sema_ctx.current_func = nullptr;
				}
			}
		}
		if (mode == MethodParseMode::Declarations)
		{
			return sema->ActOnConstructorDecl(name, loc, function_type, std::move(param_decls), nullptr);
		}
		else 
		{
			if (existing_stub)
			{
				sema->ActOnAttachMethodBody(existing_stub, std::move(param_decls), std::move(constructor_body));
			}
			return nullptr;
		}
	}

	UniqueParamVarDeclPtr Parser::ParseParamVariableDeclaration()
	{
		QualType variable_type{};
		ParseTypeQualifier(variable_type);
		ParseTypeSpecifier(variable_type);

		SourceLocation const& loc = current_token->GetLocation();
		std::string_view name = "";
		if (current_token->Is(TokenKind::identifier))
		{
			name = current_token->GetData(); 
			++current_token;
		}

		return sema->ActOnParamVariableDecl(name, loc, variable_type);
	}

	UniqueVarDeclPtrList Parser::ParseVariableDeclaration(DeclVisibility visibility)
	{
		UniqueVarDeclPtrList var_decl_list;
		QualType variable_type{};
		ParseTypeQualifier(variable_type);
		ParseTypeSpecifier(variable_type);
		do
		{
			if (!var_decl_list.empty())
			{
				Expect(TokenKind::comma);
			}
			if (current_token->IsNot(TokenKind::identifier))
			{
				Diag(expected_identifier);
			}
			SourceLocation const& loc = current_token->GetLocation();
			std::string_view name = current_token->GetData(); ++current_token;

			UniqueExprPtr init_expr = nullptr;
			if (Consume(TokenKind::equal))
			{
				init_expr = (current_token->Is(TokenKind::left_brace)) ? ParseInitializerListExpression() : ParseAssignmentExpression();
				if(!init_expr)
				{
					break;
				}
			}
			else if (Consume(TokenKind::left_round))
			{
				UniqueExprPtrList args;
				if (!Consume(TokenKind::right_round))
				{
					while (true)
					{
						UniqueExprPtr arg_expr = ParseAssignmentExpression();
						args.push_back(std::move(arg_expr));
						if (Consume(TokenKind::right_round))
						{
							break;
						}
						Expect(TokenKind::comma);
					}
				}
				init_expr = sema->ActOnConstructorExpr(loc, variable_type, std::move(args));
			}
			UniqueVarDeclPtr var_decl = sema->ActOnVariableDecl(name, loc, variable_type, std::move(init_expr), visibility);
			if (var_decl) 
			{
				var_decl_list.push_back(std::move(var_decl));
			}

		} while (!Consume(TokenKind::semicolon) && !diagnostics.HasErrors());
		return var_decl_list;
	}

	UniqueFieldDeclPtrList Parser::ParseFieldDeclaration(Bool first_pass)
	{
		DeclVisibility visibility = DeclVisibility::Private;
		if (Consume(TokenKind::KW_public))
		{
			visibility = DeclVisibility::Public;
		}
		else if (Consume(TokenKind::KW_private))
		{
			visibility = DeclVisibility::Private;
		}

		Bool is_static = Consume(TokenKind::KW_static);

		UniqueFieldDeclPtrList member_var_decl_list;
		QualType variable_type{};
		ParseTypeQualifier(variable_type);
		ParseTypeSpecifier(variable_type);
		do
		{
			if (!member_var_decl_list.empty())
			{
				Expect(TokenKind::comma);
			}
			if (current_token->IsNot(TokenKind::identifier))
			{
				Diag(expected_identifier);
			}
			SourceLocation const& loc = current_token->GetLocation();
			std::string_view name = current_token->GetData(); ++current_token;

			UniqueExprPtr init_expr = nullptr;
			if (Consume(TokenKind::equal))
			{
				init_expr = current_token->Is(TokenKind::left_brace) ? ParseInitializerListExpression() : ParseAssignmentExpression();
				if(!init_expr)
				{
					break;
				}
			}
			if (first_pass)
			{
				UniqueFieldDeclPtr var_decl = sema->ActOnFieldDecl(name, loc, variable_type, std::move(init_expr), visibility, is_static);
				if (var_decl)
				{
					member_var_decl_list.push_back(std::move(var_decl));
				}
			}
		} while (!Consume(TokenKind::semicolon) && !diagnostics.HasErrors());
		return member_var_decl_list;
	}

	UniqueDeclPtrList Parser::ParseExternVariableDeclaration()
	{
		UniqueDeclPtrList var_decl_list;
		QualType variable_type{};
		ParseTypeQualifier(variable_type);
		ParseTypeSpecifier(variable_type);
		do
		{
			if (!var_decl_list.empty())
			{
				Expect(TokenKind::comma);
			}
			if (current_token->IsNot(TokenKind::identifier))
			{
				Diag(expected_identifier);
			}
			SourceLocation const& loc = current_token->GetLocation();
			std::string_view name = current_token->GetData(); ++current_token;

			UniqueVarDeclPtr var_decl = sema->ActOnVariableDecl(name, loc, variable_type, nullptr, DeclVisibility::Extern);
			if (var_decl) 
			{
				var_decl_list.push_back(std::move(var_decl));
			}
		} while (!Consume(TokenKind::semicolon) && !diagnostics.HasErrors());
		return var_decl_list;
	}

	UniqueEnumDeclPtr Parser::ParseEnumDeclaration()
	{
		std::string enum_tag = "";
		SourceLocation loc = current_token->GetLocation();
		if (current_token->Is(TokenKind::identifier))
		{
			enum_tag = current_token->GetData();
			++current_token;
		}

		UniqueEnumMemberDeclPtrList enum_members;
		Expect(TokenKind::left_brace);
		Int64 val = 0;
		while (true)
		{
			if (current_token->Is(TokenKind::right_brace) || current_token->Is(TokenKind::eof))
			{
				Diag(empty_enum_declaration);
				Consume(TokenKind::right_brace);
				break;
			}
			std::string enum_value_name;
			if (current_token->IsNot(TokenKind::identifier))
			{
				Diag(expected_identifier);
			}
			SourceLocation loc = current_token->GetLocation();
			enum_value_name = current_token->GetData(); ++current_token;
			if (Consume(TokenKind::equal))
			{
				UniqueExprPtr enum_value_expr = ParseAssignmentExpression();
				UniqueEnumMemberDeclPtr enum_member = sema->ActOnEnumMemberDecl(enum_value_name, loc, std::move(enum_value_expr));
				if (enum_member) 
				{ 
					val = enum_member->GetValue() + 1; 
					enum_members.push_back(std::move(enum_member)); 
				}
			}
			else
			{
				UniqueEnumMemberDeclPtr enum_member = sema->ActOnEnumMemberDecl(enum_value_name, loc, val++);
				if (enum_member) 
				{
					enum_members.push_back(std::move(enum_member));
				}
			}
			if (Consume(TokenKind::right_brace))
			{
				break;
			}
			Expect(TokenKind::comma);
		}
		Expect(TokenKind::semicolon);

		return sema->ActOnEnumDecl(enum_tag, loc, std::move(enum_members));
	}

	UniqueAliasDeclPtr Parser::ParseAliasDeclaration()
	{
		std::string alias_name = "";
		SourceLocation loc = current_token->GetLocation();
		if (current_token->IsNot(TokenKind::identifier))
		{
			Diag(expected_identifier);
		}
		alias_name = current_token->GetData();
		++current_token;

		Expect(TokenKind::equal);

		QualType aliased_type{};
		ParseTypeQualifier(aliased_type);
		ParseTypeSpecifier(aliased_type);
		Expect(TokenKind::semicolon);

		return sema->ActOnAliasDecl(alias_name, loc, aliased_type);
	}

	UniqueDeclPtr Parser::ParseClassDeclaration()
	{
		std::string class_name = "";
		SourceLocation loc = current_token->GetLocation();
		if (current_token->Is(TokenKind::identifier))
		{
			class_name = current_token->GetData();
			++current_token;
		}
		else
		{
			Expect(TokenKind::identifier);
		}

		std::vector<std::string> type_params;
		if (Consume(TokenKind::less))
		{
			do
			{
				if (current_token->IsNot(TokenKind::identifier))
				{
					Diag(expected_identifier);
					return nullptr;
				}
				type_params.push_back(std::string(current_token->GetData()));
				++current_token;
			} while (Consume(TokenKind::comma));
			Expect(TokenKind::greater);
		}

		if (!type_params.empty())
		{
			Bool const final = Consume(TokenKind::KW_final);
			ClassDecl const* base_class = nullptr;
			if (Consume(TokenKind::colon))
			{
				std::string base_class_name = "";
				if (current_token->Is(TokenKind::identifier))
				{
					base_class_name = current_token->GetData();
					if (base_class_name.empty())
					{
						Diag(expected_base_class_name);
						return nullptr;
					}
					++current_token;
				}
				else
				{
					Diag(expected_base_class_name);
					return nullptr;
				}
				base_class = sema->ActOnBaseClassSpecifier(base_class_name, current_token->GetLocation());
			}

			Uint64 body_token_begin = current_token - tokens.begin();
			Int32 brace_count = 0;
			Expect(TokenKind::left_brace); ++brace_count;
			while (brace_count != 0)
			{
				if (Consume(TokenKind::left_brace))
				{
					++brace_count;
				}
				else if (Consume(TokenKind::right_brace))
				{
					--brace_count;
				}
				else ++current_token;
			}
			Expect(TokenKind::semicolon);
			Uint64 body_token_end = current_token - tokens.begin();

			return sema->ActOnTemplateClassDecl(class_name, loc, std::move(type_params), base_class, final, body_token_begin, body_token_end);
		}
